`align-issue-labels` - Remove unnecessary `&`

--- a/source/features/align-issue-labels.css
+++ b/source/features/align-issue-labels.css
@@ -5,14 +5,14 @@ html:not([rgh-OFF-align-issue-labels]) {
 		div[class^='Title-module__container'] {
 			display: contents;
 
-			& > [class*='heading'] {
+			> [class*='heading'] {
 				grid-area: primary;
 				padding-top: 8px;
 			}
-			& > span[class*='trailingBadgesSpacer'] {
+			> span[class*='trailingBadgesSpacer'] {
 				display: none;
 			}
-			& > span[class*='trailingBadgesContainer'] {
+			> span[class*='trailingBadgesContainer'] {
 				grid-area: -1 / main-content;
 				padding-bottom: 10px;
 				&:empty {
